Fix map going beyond on small screens

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -41,3 +41,7 @@ $hero-darken: $dark !default;
   }
 }
 
+
+.image.map-max-width {
+  max-width: 425px;
+}
